--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bb_api",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://eyad99.ghithub.io/Favorite-Films",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -20,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
