--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bb_api",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://eyad99.ghithub.io/Favorite-Films",
+  "homepage" : "https://eyad99.github.io/Favorite-Films",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
