--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bb_api",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://eyad99.github.io/Favorite-Films",
+  "homepage": "https://eyad99.github.io/Favorite-Films",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-paginate": "^7.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
