--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "axion": "^0.1.0",
     "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
+    "i18next": "^19.9.0",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.1.1",
+    "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.8",
     "react-paginate": "^7.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "save": "^2.4.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
